Api-Gateway routing issue fixed

--- a/config-server/src/main/resources/config/api-gateway.properties
+++ b/config-server/src/main/resources/config/api-gateway.properties
@@ -5,11 +5,14 @@ eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 
 # Micrometer - Setting the probability to 1.0 is helpful for testing, debugging, or analyzing your application in detail.
 # However, before deploying your application to a production environment, you might want to reduce this value
+# Zipkin will be running on the port 9411
 management.tracing.sampling.probability= 1.0
 
 # API gateway configurations
 spring.cloud.gateway.routes[0].id= springboot-jwt-auth
 spring.cloud.gateway.routes[0].uri= lb://springboot-jwt-auth
 spring.cloud.gateway.routes[0].predicates[0]= Path=/api/v1/auth/**
-spring.cloud.gateway.routes[0].predicates[1]= Path=/api/v1/admin/**
-spring.cloud.gateway.routes[0].predicates[2]= Path=/api/v1/user/**
+
+spring.cloud.gateway.routes[1].id= events-service
+spring.cloud.gateway.routes[1].uri= lb://events-service
+spring.cloud.gateway.routes[1].predicates[0]= Path=/api/v1/events/**
