--- a/config-server/src/main/resources/config/springboot-jwt-auth.properties
+++ b/config-server/src/main/resources/config/springboot-jwt-auth.properties
@@ -13,5 +13,6 @@ spring.jpa.properties.hibernate.format-sql = true
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 
 # Micrometer - Setting the probability to 1.0 is helpful for testing, debugging, or analyzing your application in detail.
-# However, before deploying your application to a production environment, you might want to reduce this value
+# However, before deploying your application to a production environment, you might want to reduce this value.
+# Zipkin will be running on the port 9411
 management.tracing.sampling.probability= 1.0
