--- a/config-server/src/main/resources/config/api-gateway.properties
+++ b/config-server/src/main/resources/config/api-gateway.properties
@@ -11,7 +11,7 @@ management.tracing.sampling.probability= 1.0
 # API gateway configurations
 spring.cloud.gateway.routes[0].id= springboot-jwt-auth
 spring.cloud.gateway.routes[0].uri= lb://springboot-jwt-auth
-spring.cloud.gateway.routes[0].predicates[0]= Path=/api/v1/auth/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/auth/**, /api/v1/user-events/**, /api/v1/roles/**
 
 spring.cloud.gateway.routes[1].id= events-service
 spring.cloud.gateway.routes[1].uri= lb://events-service
