Get user events inter-service api call changed.

--- a/config-server/src/main/resources/config/api-gateway.properties
+++ b/config-server/src/main/resources/config/api-gateway.properties
@@ -2,11 +2,14 @@ server.port= 8060
 
 # This is the default server URL the client will broadcast to.
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.instance.instance-id= ${spring.application.name}:${random.uuid}
 
 # Micrometer - Setting the probability to 1.0 is helpful for testing, debugging, or analyzing your application in detail.
 # However, before deploying your application to a production environment, you might want to reduce this value
 # Zipkin will be running on the port 9411
 management.tracing.sampling.probability= 1.0
+
+spring.cloud.loadbalancer.ribbon.enabled=false
 
 # API gateway configurations
 spring.cloud.gateway.routes[0].id= springboot-jwt-auth
