--- a/config-server/src/main/resources/config/springboot-jwt-auth.properties
+++ b/config-server/src/main/resources/config/springboot-jwt-auth.properties
@@ -11,6 +11,7 @@ spring.jpa.properties.hibernate.format-sql = true
 
 # This is the default server URL the client will broadcast to.
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.instance.instance-id= ${spring.application.name}:${random.uuid}
 
 # Micrometer - Setting the probability to 1.0 is helpful for testing, debugging, or analyzing your application in detail.
 # However, before deploying your application to a production environment, you might want to reduce this value.
