Basic security integrated to eureka service registry

--- a/config-server/src/main/resources/config/events-service.properties
+++ b/config-server/src/main/resources/config/events-service.properties
@@ -1,4 +1,4 @@
-server.port = 8081
+server.port = 0
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/spring-boot-events
 spring.datasource.username= postgres
@@ -10,7 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format-sql = true
 
 # This is the default server URL the client will broadcast to.
-eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone= http://theadmin:thepassword@localhost:8761/eureka/
 eureka.instance.instance-id= ${spring.application.name}:${random.uuid}
 
 # Micrometer - Setting the probability to 1.0 is helpful for testing, debugging, or analyzing your application in detail.
