--- a/config-server/src/main/resources/config/api-gateway.properties
+++ b/config-server/src/main/resources/config/api-gateway.properties
@@ -1,7 +1,7 @@
 server.port= 8060
 
 # This is the default server URL the client will broadcast to.
-eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone= http://theadmin:thepassword@localhost:8761/eureka/
 eureka.instance.instance-id= ${spring.application.name}:${random.uuid}
 
 # Micrometer - Setting the probability to 1.0 is helpful for testing, debugging, or analyzing your application in detail.
