--- a/service-registry/src/main/resources/application.properties
+++ b/service-registry/src/main/resources/application.properties
@@ -6,5 +6,10 @@ eureka.instance.hostname = localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
+# eureka server login credentials
+spring.security.basic.enabled=true
+spring.security.user.name=theadmin
+spring.security.user.password=thepassword
+
 # This is the default server URL the client will broadcast to.
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
